--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "@tweakpane/core": "^1.0.8",
     "@tweakpane/plugin-essentials": "^0.1.4",
     "@types/three": "^0.137.0",
+    "pathe": "^0.2.0",
     "three": "^0.137.5",
     "tweakpane": "^3.0.7",
     "typescript": "^4.5.5",
-    "vite": "^2.8.4"
+    "vite": "^2.8.4",
+    "vite-plugin-glsl": "^0.1.1"
   }
 }
