fix: typescript issues

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,10 @@
     "noEmit": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noImplicitReturns": true
+    "noImplicitReturns": true,
+    "paths": {
+      "/@/*": ["./src/*"]
+    }
   },
   "include": ["src"]
 }
