--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "modern-three",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Modern ThreeJS boilerplate powered by Vite & Typescript.",
   "author": "Alvaro Saburido <hola@alvarosaburido.dev>",
   "license": "MIT",
@@ -26,7 +26,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "version": "conventional-changelog -p angular -i CHANGELOG.md -s && git add CHANGELOG.md"
   },
   "devDependencies": {
     "@tweakpane/core": "^1.0.8",
