--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "useDefineForClassFields": true,
     "module": "ESNext",
     "lib": ["ESNext", "DOM"],
-    "types": ["vite/client", "node", "three", "tweakpane"],
+    "types": ["vite/client", "three", "tweakpane"],
     "moduleResolution": "Node",
     "strict": true,
     "sourceMap": true,
