--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "three": "^0.144.0",
     "tweakpane": "^3.1.0",
     "typescript": "^4.8.2",
-    "vite": "^3.0.9",
-    "vite-plugin-glsl": "^0.3.0"
+    "vite": "^3.0.9"
   }
 }
