--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
   "name": "modern-three",
+  "type": "module",
   "version": "1.1.0",
   "description": "Modern ThreeJS boilerplate powered by Vite & Typescript.",
   "author": "Alvaro Saburido <hola@alvarosaburido.dev>",
   "license": "MIT",
-  "type": "module",
+  "homepage": "https://github.com/alvarosabu/modern-three#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/alvarosabu/modern-three.git"
+  },
+  "bugs": {
+    "url": "https://github.com/alvarosabu/modern-three/issues"
+  },
   "keywords": [
     "3d",
     "threejs",
@@ -13,32 +21,28 @@
     "typescript",
     "tweakpane"
   ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/alvarosabu/modern-three.git"
-  },
-  "bugs": {
-    "url": "https://github.com/alvarosabu/modern-three/issues"
-  },
-  "homepage": "https://github.com/alvarosabu/modern-three#readme",
   "contributors": [
     "Alvaro <hola@alvarosaburido.dev>"
   ],
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "preview": "vite preview",
     "version": "conventional-changelog -p angular -i CHANGELOG.md -s && git add CHANGELOG.md"
   },
   "devDependencies": {
-    "@tweakpane/core": "^1.1.1",
-    "@tweakpane/plugin-essentials": "^0.1.5",
-    "@types/three": "^0.146.0",
-    "pathe": "^1.0.0",
-    "three": "^0.147.0",
-    "tweakpane": "^3.1.1",
-    "typescript": "^4.9.4",
-    "vite": "^4.0.1",
-    "vite-plugin-glsl": "^1.0.1"
+    "@alvarosabu/eslint-config": "^1.1.0",
+    "@tweakpane/core": "^2.0.3",
+    "@tweakpane/plugin-essentials": "^0.2.1",
+    "@types/three": "^0.165.0",
+    "eslint": "^9.4.0",
+    "pathe": "^1.1.2",
+    "three": "^0.165.0",
+    "tweakpane": "^4.0.3",
+    "typescript": "^5.4.5",
+    "vite": "^5.2.13",
+    "vite-plugin-glsl": "^1.3.0"
   }
 }
