--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "version": "2.0.0",
   "description": "Modern ThreeJS boilerplate powered by Vite & Typescript.",
   "author": "Alvaro Saburido <hola@alvarosaburido.dev>",
+  "contributors": [
+    "Alvaro <hola@alvarosaburido.dev>"
+  ],
   "license": "MIT",
   "homepage": "https://github.com/alvarosabu/modern-three#readme",
   "repository": {
@@ -21,28 +24,27 @@
     "typescript",
     "tweakpane"
   ],
-  "contributors": [
-    "Alvaro <hola@alvarosaburido.dev>"
-  ],
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "preview": "vite preview",
-    "version": "conventional-changelog -p angular -i CHANGELOG.md -s && git add CHANGELOG.md"
+    "version": "npx conventional-changelog -p angular -i CHANGELOG.md -s && git add CHANGELOG.md"
+  },
+  "dependencies": {
+    "three": "^0.171.0"
   },
   "devDependencies": {
-    "@alvarosabu/eslint-config": "^1.1.0",
-    "@tweakpane/core": "^2.0.3",
+    "@alvarosabu/eslint-config": "^1.3.0",
+    "@tweakpane/core": "^2.0.5",
     "@tweakpane/plugin-essentials": "^0.2.1",
-    "@types/three": "^0.165.0",
-    "eslint": "^9.4.0",
+    "@types/three": "^0.171.0",
+    "eslint": "^9.17.0",
     "pathe": "^1.1.2",
-    "three": "^0.165.0",
-    "tweakpane": "^4.0.3",
-    "typescript": "^5.4.5",
-    "vite": "^5.2.13",
-    "vite-plugin-glsl": "^1.3.0"
+    "tweakpane": "^4.0.5",
+    "typescript": "^5.7.2",
+    "vite": "^6.0.4",
+    "vite-plugin-glsl": "^1.3.1"
   }
 }
